  namespace rename.
* Make wfTimestamp recognize negative unix timestamp values.
* (bug 24401) SimpleSearch: No button/text indicating 'Search' if image is disabled
* (bug 23293) Do not show change tags when special:recentchanges(linked)
  or special:newpages is transcluded into another page as it messes up the
  page.

=== API changes in 1.17 ===
* (bug 22738) Allow filtering by action type on query=logevent.
* (bug 22764) uselang parameter for action=parse.
* (bug 22944) API: watchlist options are inconsistent.
* (bug 22868) don't list infinite block expiry date as "now" in API logevents.
* (bug 22290) prop=revisions now outputs "comment" field even when comment.
  is empty, for consistency with list=recentchanges.
* (bug 19721) API action=help should have a way to just list for a specific module.
* (bug 23458) Add support for pageid parameter to action=parse requests.
* (bug 23460) Parse action should have a section option.
* (bug 21346) Make deleted images searchable by hash.
* (bug 23461) Normalise usage of parameter names in parameter descriptions.
* (bug 23548) Allow access of another users watchlist through watchlistraw 
  using token and username.
* (bug 23524) Api Modules as followup to bug 14473 (Add iwlinks table to 
  track inline interwiki link usage.
* Add pltitles and tltemplates to prop=links and prop=templates respectively,
  similar to prop=categories's clcategorie
* (bug 23834) Invalid "thumbwidth" and "thumbheight" in "imageinfo" query when
  thumbnailing larger than original image
* (bug 23835) Need "thumbmime" result in "imageinfo" query
* (bug 23851) Repair diff for file redirect pages
* (bug 24009) Include implicit groups in action=query&list=users&usprop=groups
* (bug 24016) API: Handle parameters specified in simple string syntax 
  ( 'paramname' => 'defaultval' ) correctly when outputting help
* (bug 24089) Logevents causes PHP Notice if leprop=title isn't supplied
* (bug 23473) Give description of properties on all modules